Fix form field spacing within the Modal example

--- a/website/app/styles/pages/components/modal.scss
+++ b/website/app/styles/pages/components/modal.scss
@@ -17,4 +17,10 @@
       pointer-events: none;
     }
   }
+
+  #form-modal {
+    .hds-form-field--layout-vertical:first-child {
+      margin-bottom: 20px;
+    }
+  }
 }
